# Code-Slayer-FDRL-Traffic

./: .gitignore  README.md  main.py  pyproject.toml  test_websocket.py
FDRL/: .gitignore  config.yaml  diagnose_gridlock.py  discover_junctions.py  federated_client.py  federated_server.py  generate_tls_logic.py  infer.py  package-lock.json  package.json  ppo_agent.py  run_complete.sh  sumo_simulator.py  train.py  training_logs.json
FDRL/inference_results/: rl_results.json  (+3 more)
Vegha/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
sumo_server/: .dockerignore  Dockerfile  config.yaml  docker-compose.yml  frame.html  main.py  requirements.txt  style.css
sumo_server/FDRL/: README.md  __init__.py  discover_junction.py  infer.py  ppo_agent.py  pyproject.toml  sumo_simulator.py  train.py  training_logs.json
sumo_server/FDRL/inference_results/: inference_log_fixed.csv
sumo_server/FDRL/sumo_files/Berlin/: build.bat  stats.xml  tripinfos.xml  trips.trips.xml
sumo_server/FDRL/sumo_files/High/: build.bat  osm.bus.trips.xml  osm.netccfg  osm_pt.rou.xml  trips.trips.xml  vehroutes.xml
sumo_server/FDRL/sumo_files/Moderate/: edgeData.xml  osm.bus.trips.xml  osm.motorcycle.trips.xml  osm.net.xml  osm.passenger.trips.xml  osm.sumocfg  osm_pt.rou.xml  osm_stops.add.xml  output.add.xml  tripinfos.xml  trips.trips.xml
sumo_server/FDRL/sumo_files/Severe/: osm.bus.trips.xml  osm.netccfg  osm.polycfg  osm.sumocfg  osm.truck.trips.xml  osm_ptlines.xml  osm_stops.add.xml  output.add.xml  stats.xml
sumo_server/FDRL/sumo_files/simulated/: cross.rou.xml
(+126 files in other folders)
